--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,3 @@
 <resources>
-    <string name="app_name">Login</string>
-    <string name="username">Username or email</string>
-    <string name="password">Password</string>
-    <string name="authenticate">Authenticate</string>
+    <string name="app_name">Flickr app</string>
 </resources>
