--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Flickr app</string>
     <string name="getimage">Get an image</string>
+    <string name="imgDesc">Flickr Image</string>
 </resources>
